--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -18,3 +18,13 @@ log4j.appender.PERF_LOGGER.DeletionPercentage=10
 log4j.appender.PERF_LOGGER.layout=org.apache.log4j.PatternLayout
 log4j.appender.PERF_LOGGER.layout.ConversionPattern=%d{ISO8601} %-5p %c{2} (%F:%M) - %m%n
 #log4j.appender.PERF_LOGGER.layout.ConversionPattern=%d{ISO8601} %-5p %c{2} (%F:%M(%L)) - %m%n
+
+log4j.appender.PERF_STATUS_LOGGER=tachyon.Log4jFileAppender
+log4j.appender.PERF_STATUS_LOGGER.File=${tachyon.perf.home}/logs/status.log
+
+log4j.appender.PERF_STATUS_LOGGER.MaxFileSize=10
+log4j.appender.PERF_STATUS_LOGGER.MaxBackupIndex=100
+log4j.appender.PERF_STATUS_LOGGER.DeletionPercentage=10
+log4j.appender.PERF_STATUS_LOGGER.layout=org.apache.log4j.PatternLayout
+log4j.appender.PERF_STATUS_LOGGER.layout.ConversionPattern=%d{ISO8601} %-5p %c{2} (%F:%M) - %m%n
+#log4j.appender.PERF_STATUS_LOGGER.layout.ConversionPattern=%d{ISO8601} %-5p %c{2} (%F:%M(%L)) - %m%n
