Migrate to tachyon-0.6.0-SNAPSHOT
Migrate to
tachyon-0.6.0-SNAPSHOT-commit-1f512044b939b9b0a2c58f64bca4516642daf8a8

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
   <name>tachyon-perf</name>
   <url>http://pasa-bigdata.nju.edu.cn</url>
 
+  <repositories>
+    <repository>
+      <id>in-project</id>
+      <name>In Project Repo</name>
+      <url>file://${project.basedir}/lib</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -17,25 +24,13 @@
     </dependency>
     <dependency>
       <groupId>org.tachyonproject</groupId>
-      <artifactId>tachyon-client</artifactId>
+      <artifactId>tachyon</artifactId>
       <version>${tachyon.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.hadoop</groupId>
-          <artifactId>hadoop-client</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
-      <version>${hadoop.version}</version>
     </dependency>
   </dependencies>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <hadoop.version>1.0.4</hadoop.version>
     <tachyon.version>0.5.0</tachyon.version>
   </properties>
 
