--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <tachyon.version>0.5.0</tachyon.version>
+    <tachyon.version>0.6.0-SNAPSHOT</tachyon.version>
   </properties>
 
   <build>
